fixed height and overflow scroll for social activity container

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
-/*
+  /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -46,7 +46,9 @@ body {
 }
 
 .social_activity {
-  background-color:#EEE;
+  background-color: #EEE;
+  height: 463px;
+  overflow-y: scroll;
 }
 
 #top-albums table {
